# fast-train

./: .commit_prompt.txt  pyproject.toml
src/fast_train/: __init__.py  finetune.py
