[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fast-train"
version = "0.1.0"
description = "Training utilities."
requires-python = ">=3.9"
dependencies = [
    "transformers>=4.44.0",
    "datasets>=3.0.0",
    "torch"
]

[project.optional-dependencies]
finetune = [
    "peft>=0.13.0",
    "trl>=0.9.0",
    "bitsandbytes>=0.43.0",
    "accelerate>=0.34.0",
    "evaluate",
    "scikit-learn",
    "sentencepiece",
    "protobuf"
]